--- a/install
+++ b/install
@@ -5,6 +5,8 @@ PROG_PATH="/data/app/$PROG"
 MSG_PREFIX=" *"
 echo "$MSG_PREFIX start install $PROG"
 
+make -j4
+
 if [ -d "$PROG_PATH" ] ; then
 	rm -rf $PROG_PATH
 fi
